fix: adjust padding in result header for better alignment

--- a/css/result.css
+++ b/css/result.css
@@ -107,5 +107,5 @@
   background-color: oklch(0.2478 0 0);
   border: 1px oklch(87.81% 0.16869 91.863 / 0.25) solid;
   font-size: 1.5rem;
-  padding: 1.5rem 5rem;
+  padding: 1rem 5rem;
 }
